--- a/recycle_talk/css/components/user-component.css
+++ b/recycle_talk/css/components/user-component.css
@@ -49,6 +49,11 @@
   margin-bottom: 55px;
 }
 
+.chats-screen__friends {
+  padding-top: 10px;
+  margin-bottom: 55px;
+}
+
 .friends-screen__channel-header {
   margin-bottom: 20px;
   display: flex;
@@ -57,4 +62,25 @@
   color: rgba(0, 0, 0, 0.2);
   font-weight: 300;
   font-size: 13px;
+}
+
+.user-component {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.timeBadge {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-end;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.2);
+  font-weight: 300;
+  margin-left: 30px;
+}
+
+.timeBadge > .badge {
+  margin-top: 5px;
 }
