--- a/recycle_talk/css/components/nav-bar.css
+++ b/recycle_talk/css/components/nav-bar.css
@@ -2,10 +2,10 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: whitesmoke;
+  background-color: rgb(238, 244, 245);
+  box-shadow: 0 4px 6px 8px rgb(238, 244, 245);
   padding: 15px 40px;
   box-sizing: border-box; /*padding을 해도 width가 늘어나지 않게 하는 문장*/
-  border-top: 1px solid rgba(136, 136, 136, 0.2);
 }
 
 .nav__list {
@@ -21,14 +21,49 @@
   color: rgb(36, 36, 44);
 }
 
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
 .nav__btn {
   font-size: 12px;
+  animation: appearBtnAnimation 0.5s ease-in-out forwards;
+  transform: translateY(50px);
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.4s;
+}
+.nav__btn:nth-child(4) {
+  animation-delay: 0.6s;
+}
+
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(5px) rotateY(360deg);
+  }
+  100% {
+    transform: none;
+  }
 }
 
 .nav__notification {
   position: absolute;
   left: 15px;
   top: -6px;
+  animation: notificationAnimation 2s ease-in-out infinite;
 }
 
 .nav__dot {
@@ -44,19 +79,15 @@
   top: -10px;
 }
 
-.fa-cog {
-  position: relative;
-}
-
-.head__dot {
+.blue {
   display: flex;
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  background-color: tomato;
+  background-color: rgb(22, 111, 201);
+  position: relative;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  left: 0px;
-  top: -4px;
+  left: 25px;
+  top: -10px;
 }
