--- a/recycle_talk/css/components/screen-header.css
+++ b/recycle_talk/css/components/screen-header.css
@@ -14,3 +14,32 @@
   margin-left: 20px;
   font-size: 20px;
 }
+
+.fa-cog {
+  position: relative;
+}
+
+.head__dot {
+  display: flex;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: tomato;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 15px;
+  top: 40px;
+}
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 2s infinite;
+}
