--- a/recycle_talk/css/components/status-bar.css
+++ b/recycle_talk/css/components/status-bar.css
@@ -7,6 +7,7 @@
   width: 100%;
   box-sizing: border-box;
   background-color: white;
+  z-index: 10;
 }
 
 .status-bar__column {
@@ -18,6 +19,14 @@
   margin-right: 5px;
 }
 
+.status-bar__column:first-child > span {
+  opacity: 0.5;
+}
+.status-bar__column:first-child > i {
+  padding-left: 3px;
+  font-size: 12px;
+}
+
 .status-bar__column:nth-child(2) {
   display: flex;
   justify-content: center;
@@ -27,8 +36,10 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding-right: 3px;
 }
 
 .status-bar__column .fa-battery-full {
   margin: 0px 4px;
+  color: rgb(0, 71, 0);
 }
