--- a/recycle_talk/css/components/user-component.css
+++ b/recycle_talk/css/components/user-component.css
@@ -11,6 +11,7 @@
   border-radius: 20px;
   margin-right: 20px;
   object-fit: cover;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .user-component__name {
@@ -29,12 +30,14 @@
   width: 70px;
   height: 70px;
   border-radius: 23px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .user-component__photo--sm {
   width: 50px;
   height: 50px;
   border-radius: 16px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .user-component__name--not-bold {
@@ -68,6 +71,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .timeBadge {
