--- a/recycle_talk/css/screens/index.css
+++ b/recycle_talk/css/screens/index.css
@@ -1,5 +1,5 @@
 .welcome-header {
-  margin: 90px 0px;
+  margin: 200px 0px 50px 0px;
   text-align: center;
 }
 
@@ -56,7 +56,7 @@
 }
 
 .login-form input[type="submit"]:hover {
-  background-color: rgb(0, 128, 90);
+  background-color: var(--green);
   color: white;
 }
 
