--- a/recycle_talk/css/style.css
+++ b/recycle_talk/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap");
+
 @import "reset.css";
 @import "variables.css";
 
@@ -7,23 +9,32 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/alt-screen-header.css";
+@import "components/no-mobile.css";
 
 /* screens */
-@import "screens/login.css";
+@import "screens/index.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
+@import "screens/setting.css";
+@import "screens/chat.css";
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  width: 100%;
+  font-family: "Noto Sans KR", sans-serif;
+  width: auto;
   height: 100%;
-
   animation: fadein 0.3s ease-in-out;
 }
 
+.background {
+  background-image: url("../image/background-3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .login-background {
-  background-image: url("../image/background.jpg");
+  background-image: url("../image/background-2.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
