--- a/recycle_talk/css/screens/more.css
+++ b/recycle_talk/css/screens/more.css
@@ -72,7 +72,6 @@
 }
 
 .more-screen__links > a > img {
-  width: 150px;
   object-fit: contain;
   margin: 10px 5px;
 }
@@ -80,4 +79,21 @@
 .more-screen__links > a > span {
   font-weight: 200;
   font-size: 15px;
+}
+
+@keyframes biggerImg {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: none;
+  }
+}
+
+.user-component__column > a > img:hover {
+  will-change: transform;
+  animation: biggerImg 0.5s linear infinite;
 }
