--- a/recycle_talk/css/screens/friends.css
+++ b/recycle_talk/css/screens/friends.css
@@ -46,3 +46,20 @@
   animation-delay: 1.1s;
   color: rgba(175, 202, 205, 0.637);
 }
+
+@keyframes biggerImg {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: scale(10);
+  }
+  100% {
+    transform: none;
+  }
+}
+
+.profile_photo:hover {
+  will-change: transform;
+  animation: biggerImg 2s linear infinite;
+}
