--- a/recycle_talk/css/screens/more.css
+++ b/recycle_talk/css/screens/more.css
@@ -48,6 +48,7 @@
   height: 250px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   padding-top: 15px;
+  padding-bottom: 150px;
 }
 
 .more-screen__suggest > h6 {
