--- a/recycle_talk/css/style.css
+++ b/recycle_talk/css/style.css
@@ -22,7 +22,7 @@
 
 body {
   font-family: "Noto Sans KR", sans-serif;
-  width: auto;
+  width: 100%;
   height: 100%;
   animation: fadein 0.3s ease-in-out;
 }
