--- a/recycle_talk/css/screens/friends.css
+++ b/recycle_talk/css/screens/friends.css
@@ -32,12 +32,14 @@
   width: 100%;
   height: 100%;
   background-image: url("../../image/background-2.png");
+  overflow: visible;
   background-color: white;
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  position: absolute;
+  position: fixed;
   top: 0px;
-  z-index: 20;
+  z-index: 50;
   display: flex;
   justify-content: center;
   align-items: center;
