--- a/recycle_talk/css/style.css
+++ b/recycle_talk/css/style.css
@@ -20,11 +20,23 @@
 @import "screens/setting.css";
 @import "screens/chat.css";
 
+/* chats */
+@import "chats/chat1.css";
+@import "chats/chat2.css";
+@import "chats/chat3.css";
+@import "chats/chat4.css";
+@import "chats/chat5.css";
+
 body {
   font-family: "Noto Sans KR", sans-serif;
   width: 100%;
   height: 100%;
   animation: fadein 0.3s ease-in-out;
+}
+
+.main-screen {
+  padding: 0px 20px;
+  padding-bottom: 10px;
 }
 
 .background {
@@ -35,15 +47,6 @@ body {
 .login-background {
   background-image: url("../image/background-2.png");
   background-size: cover;
-}
-
-html {
-  height: 100%;
-}
-
-.main-screen {
-  padding: 0px 20px;
-  padding-bottom: 10px;
 }
 
 @keyframes fadein {
